# caravan-lib

./: .gitmodules  Base.hpp  Buffer.hpp  CMakeLists.txt  Consumer.hpp  LICENSE  Logger.hpp  Producer.hpp  README.md  TaskResult.hpp  caravan.hpp  sample.cpp  test_caravan.cpp
